@@ -5,10 +5,10 @@
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="1.0"/>
-    <import addon="metadata.common.movieposterdb.com" version="1.0"/>
-    <import addon="metadata.common.imdb.com" version="1.0"/>
-    <import addon="metadata.common.impa.com" version="1.0"/>
+    <import addon="metadata.common.themoviedb.org" version="1.0.2"/>
+    <import addon="metadata.common.movieposterdb.com" version="1.0.2"/>
+    <import addon="metadata.common.imdb.com" version="1.0.2"/>
+    <import addon="metadata.common.impa.com" version="1.0.2"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.1"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
