@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <settings>
     <setting label="30000" type="bool" id="fullcredits" default="false"/>
-    <setting label="30001" type="bool" id="fanart" default="true"/>
     <setting label="30002" type="bool" id="tmdbthumbs" default="true"/>
+    <setting label="30001" type="bool" id="fanart" default="true"/>
     <setting label="30003" type="bool" id="impawards" default="false"/>
     <setting label="30004" type="bool" id="movieposterdb" default="false"/>
     <setting label="30005" type="bool" id="trailer" default="false"/>
