@@ -1,9 +1,12 @@
+[B]1.0.8[/B]
+ - changed: switch to chaining IMDb scraper library functions
+
 [B]1.0.7[/B]
- - Fixed MPAA scraping from IMDb
+ - fixed MPAA scraping from IMDb
 
 [B]1.0.6[/B]
 - replace dtrailer.com with HD-Trailers.net for trailer scraping
-- Fix dupe &amp; in settings strings
+- fixed dupe &amp; in settings strings
 
 [B]1.0.5[/B]
 - return numeric runtime/duration values round 2
